--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
                       </div>
                 </div>
             </div>
+            <div class="row centerJ my-4">
+                <button class="btn btn-primary" style="width: 250px;">View Sandwiches</button>
+            </div>
         </div>
     
 
