--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -23,10 +23,10 @@
                     </button>
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link yellowJ" aria-current="page" href="#">Navbar</a>
-                            <a class="nav-link yellowJ" href="#">Features</a>
-                            <a class="nav-link yellowJ" href="#">Pricing</a>
-                            <a class="nav-link yellowJ" aria-disabled="true">Disabled</a>
+                            <a class="nav-link yellowJ" aria-current="page" href="#">Menu</a>
+                            <a class="nav-link yellowJ" href="#">About Us</a>
+                            <a class="nav-link yellowJ" href="#">Contact Us</a>
+                            <a class="nav-link yellowJ" aria-disabled="true">BanhMi</a>
                         </div>
                     </div>
                 </div>
