--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -23,10 +23,11 @@
                     </button>
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link yellowJ" aria-current="page" href="#">Menu</a>
-                            <a class="nav-link yellowJ" href="#">About Us</a>
+                            <a class="nav-link yellowJ" href="../index.html">Logo/Home</a>
+                            <a class="nav-link yellowJ" href="#">Menu</a>
                             <a class="nav-link yellowJ" href="#">Contact Us</a>
-                            <a class="nav-link yellowJ" aria-disabled="true">BanhMi</a>
+                            <a class="nav-link yellowJ" aria-current="page" href="../pages/AboutUs.html">About Us</a>
+                            <a class="nav-link yellowJ" href="#">Banh Mi?</a>
                         </div>
                     </div>
                 </div>
