--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
                     </button>
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link yellowJ" aria-current="page" href="#">Navbar</a>
-                            <a class="nav-link yellowJ" href="#">Features</a>
-                            <a class="nav-link yellowJ" href="#">Pricing</a>
-                            <a class="nav-link yellowJ" aria-disabled="true">Disabled</a>
+                            <a class="nav-link yellowJ" aria-current="page" href="#">Logo/Home</a>
+                            <a class="nav-link yellowJ" href="#">Menu</a>
+                            <a class="nav-link yellowJ" href="#">Contact Us</a>
+                            <a class="nav-link yellowJ" href="./pages/AboutUs.html">About Us</a>
+                            <a class="nav-link yellowJ" href="#">Banh Mi?</a>
                         </div>
                     </div>
                 </div>
