--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -24,10 +24,10 @@
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                             <a class="nav-link yellowJ" href="../index.html">Logo/Home</a>
-                            <a class="nav-link yellowJ" href="#">Menu</a>
-                            <a class="nav-link yellowJ" href="#">Contact Us</a>
-                            <a class="nav-link yellowJ" aria-current="page" href="../pages/AboutUs.html">About Us</a>
-                            <a class="nav-link yellowJ" href="#">Banh Mi?</a>
+                            <a class="nav-link yellowJ" href="./Menu.html">Menu</a>
+                            <a class="nav-link yellowJ" href="./ContactUs.html">Contact Us</a>
+                            <a class="nav-link yellowJ" aria-current="page" href="./AboutUs.html">About Us</a>
+                            <a class="nav-link yellowJ" href="./BanhMi.html">Banh Mi?</a>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,74 @@
         </div>
     </div>
 
+    <div><video autoplay loop class="videoJ" src="../assets/pexels-marygrace-caneba-5452068 (2160p).mp4"></video></div>
 
+
+    <div class="container-fluid bgWhiteJ" style="margin-top: -5px;">
+        <div class="row">
+            <div class="col centerJ">
+                <img src="../assets/Chef.png" alt="Picture of Chef">
+            </div>
+            <div class="col">
+                <h2>A Little Bit About Best Sandwiches</h2>
+                <p>Welcome to Best Sandwiches & Smoothies, where Banh mi is not just a sandwich but a culinary
+                    masterpiece that tells the tale of Vietnam's rich flavors. Nestled in the heart of 3330 E Hammer Ln
+                    Ste C Stockton, CA 95212, our restaurant is a homage to the bustling street food scene of Hanoi. At
+                    Best Sandwiches & Smoothies, we take pride in curating an authentic experience, from the crackling
+                    crust of our freshly baked baguettes to the savory dance of traditional Vietnamese ingredients
+                    within.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-5">
+        <hr class="yellowJ hrLineJ">
+    </div>
+
+    <div class="container-fluid footerPaddingJ">
+        <div class="row">
+            <div class="col-3">
+                <div class="row yellowJ">
+                    <h2>Best Sandwiches</h2>
+                </div>
+                <div class="row yellowJ">
+                    <h2>& Smoothies</h2>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Hours</p>
+                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Contact Us</p>
+                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Links</p>
+                        </div>
+                        <div class="row">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
