--- a/pages/BanhMi.html
+++ b/pages/BanhMi.html
@@ -11,7 +11,93 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand yellowJ" href="#"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link yellowJ" href="../index.html">Logo/Home</a>
+                            <a class="nav-link yellowJ" href="./Menu.html">Menu</a>
+                            <a class="nav-link yellowJ" href="./ContactUs.html">Contact Us</a>
+                            <a class="nav-link yellowJ" aria-current="page" href="./AboutUs.html">About Us</a>
+                            <a class="nav-link yellowJ" href="./BanhMi.html">Banh Mi?</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
+
+
+    <div class="container-fluid bgWhiteJ" style="margin-top: -5px;">
+        <div class="row">
+            <div class="col centerJ">
+                <img src="../assets/banh mi in ellipse.png" alt="Picture of Chef">
+            </div>
+            <div class="col">
+                <h2>What’s A Banh Mi?</h2>
+                <p>You may be wondering what a banh mi is? Well a banh mi is basically a short baguette with a very nice crisp crust and soft texture, but Vietnamese style. The sandwich is usually split in half and filled with savory ingredients. A banh mi usually consists of a fusion of meats and vegetables from native Vietnamese cuisine. For example cha lua which is Vietnamese sausage, cilantro, cucumber , pickled carrots, pickled daikon, red chilli and mayonnaise.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-5">
+        <hr class="yellowJ hrLineJ">
+    </div>
+
+    <div class="container-fluid footerPaddingJ">
+        <div class="row">
+            <div class="col-3">
+                <div class="row yellowJ">
+                    <h2>Best Sandwiches</h2>
+                </div>
+                <div class="row yellowJ">
+                    <h2>& Smoothies</h2>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Hours</p>
+                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Contact Us</p>
+                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Links</p>
+                        </div>
+                        <div class="row">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
