--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     </button>
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link yellowJ" aria-current="page" href="#">Logo/Home</a>
-                            <a class="nav-link yellowJ" href="#">Menu</a>
-                            <a class="nav-link yellowJ" href="#">Contact Us</a>
+                            <a class="nav-link yellowJ" aria-current="page" href="./index.html">Logo/Home</a>
+                            <a class="nav-link yellowJ" href="./pages/Menu.html">Menu</a>
+                            <a class="nav-link yellowJ" href="./pages/ContactUs.html">Contact Us</a>
                             <a class="nav-link yellowJ" href="./pages/AboutUs.html">About Us</a>
-                            <a class="nav-link yellowJ" href="#">Banh Mi?</a>
+                            <a class="nav-link yellowJ" href="./pages/BanhMi.html">Banh Mi?</a>
                         </div>
                     </div>
                 </div>
