--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -54,10 +54,8 @@
             </div>
         </div>
     </div>
-
-    <div class="row mt-5">
-        <hr class="yellowJ hrLineJ">
-    </div>
+    
+        <hr class="yellowJ hrLineJ mt-5">
 
     <div class="container-fluid footerPaddingJ">
         <div class="row">
