--- a/pages/BanhMi.html
+++ b/pages/BanhMi.html
@@ -37,20 +37,23 @@
 
 
     <div class="container-fluid bgWhiteJ" style="margin-top: -5px;">
-        <div class="row">
+        <div class="row banhMiPaddingJ">
             <div class="col centerJ">
                 <img src="../assets/banh mi in ellipse.png" alt="Picture of Chef">
             </div>
             <div class="col">
                 <h2>What’s A Banh Mi?</h2>
-                <p>You may be wondering what a banh mi is? Well a banh mi is basically a short baguette with a very nice crisp crust and soft texture, but Vietnamese style. The sandwich is usually split in half and filled with savory ingredients. A banh mi usually consists of a fusion of meats and vegetables from native Vietnamese cuisine. For example cha lua which is Vietnamese sausage, cilantro, cucumber , pickled carrots, pickled daikon, red chilli and mayonnaise.</p>
+                <p>Welcome to Best Sandwiches & Smoothies, where Banh mi is not just a sandwich but a culinary
+                    masterpiece that tells the tale of Vietnam's rich flavors. Nestled in the heart of 3330 E Hammer Ln
+                    Ste C Stockton, CA 95212, our restaurant is a homage to the bustling street food scene of Hanoi. At
+                    Best Sandwiches & Smoothies, we take pride in curating an authentic experience, from the crackling
+                    crust of our freshly baked baguettes to the savory dance of traditional Vietnamese ingredients
+                    within.</p>
             </div>
         </div>
     </div>
 
-    <div class="row mt-5">
-        <hr class="yellowJ hrLineJ">
-    </div>
+    <hr class="yellowJ hrLineJ mt-5">
 
     <div class="container-fluid footerPaddingJ">
         <div class="row">
