--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -4,14 +4,150 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Drinks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="container-fluid">
+        <div class="row">
+                <div class="headBox"> <p>Top Sellers</p>  </div>
+        </div>
+
+        <div class="row bgWhite">
+            <div class="col topFive">
+                <div class="card " style="width: 12rem; border: 0px;">
+                    <img src="../assssssssssssssssssssssssets/Taro.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col topFive">
+                <div class="card" style="width: 12rem; border: 0px;">
+                    <img src="../assssssssssssssssssssssssets/GreenTea.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col topFive">
+                <div class="card" style="width: 12rem; border: 0px;">
+                    <img src="../assssssssssssssssssssssssets/ThaiTea.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col topFive">
+                <div class="card" style="width: 12rem; border: 0px;">
+                    <img src="../assssssssssssssssssssssssets/Avocado.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col topFive">
+                <div class="card" style="width: 12rem; border: 0px;">
+                    <img src="../assssssssssssssssssssssssets/HoneyDew.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+            
+        </div>
+
+        <div class="row">
+                <div class="headBox"><p>Drinks</p></div>
+        </div>
+
+<br>
+<br>
+        <div class="row">
+            <div class="line" ></div>
+            <div class="menuText">Toppings</div>
+            <div class="line" ></div>
+        </div>
+
+        <br>
+<br>
+        <div class="row">
+            <div class="line" ></div>
+            <div class="menuText">Iced Pearl Drinks</div>
+            <div class="line" ></div>
+        </div>
+
+        <br>
+<br>
+        <div class="row">
+            <div class="line" ></div>
+            <div class="menuText">Specialty Drinks</div>
+            <div class="line" ></div>
+        </div>
+
+        <br>
+<br>
+        <div class="row">
+            <div class="line" ></div>
+            <div class="menuText">Smoothies</div>
+            <div class="line" ></div>
+        </div>
+
+        <br>
+<br>
+        <div class="row">
+            <div class="line" ></div>
+            <div class="menuText">Ice Slushes</div>
+            <div class="line" ></div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
