--- a/index.html
+++ b/index.html
@@ -288,10 +288,78 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="row centerJ">
+                            <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                        </div>
+                        <div class="row centerJ">
+                            <img class="starJ" src="./assets/Star.png" alt="">
+                            <img class="starJ" src="./assets/Star.png" alt="">
+                            <img class="starJ" src="./assets/Star.png" alt="">
+                            <img class="starJ" src="./assets/Star.png" alt="">
+                            <img class="starJ" src="./assets/Star.png" alt="">
+                        </div>
+                        <div class="row">
+                            <p class="txtCenterJ">
+                                The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
+                                compared to other restaurants but are packed with sooo much flavor. I usually go for the
+                                #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
+                                than some shops that specialize in boba drinks. It's always chewy and sweet. This place
+                                is cash only and I've seen the same lady at the front register for years now. She's
+                                sweet and I could tell she is a hard worker. Always gotta support this place when I have
+                                a craving for it!!
+                            </p>
+                        </div>
+                        <div class="row centerJ">
+                            <img class="quotesJ" src="./assets/Quotes.png" alt="">
+                        </div>
+                        <div class="row">
+                            <p class="txtCenterJ">Tina T</p>
+                        </div>
+                        <div class="row">
+                            <p class="txtCenterJ">Customer</p>
+                        </div>
+                        <div class="row centerJ">
+                            <img class="dotsJ" src="./assets/DotOutline.png" alt="">
+                            <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                            <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="row centerJ">
+                            <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                        </div>
+                        <div class="row centerJ">
+                            <img class="starJ" src="./assets/Star.png" alt="">
+                            <img class="starJ" src="./assets/Star.png" alt="">
+                            <img class="starJ" src="./assets/Star.png" alt="">
+                            <img class="starJ" src="./assets/Star.png" alt="">
+                            <img class="starJ" src="./assets/Star.png" alt="">
+                        </div>
+                        <div class="row">
+                            <p class="txtCenterJ">
+                                The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
+                                compared to other restaurants but are packed with sooo much flavor. I usually go for the
+                                #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
+                                than some shops that specialize in boba drinks. It's always chewy and sweet. This place
+                                is cash only and I've seen the same lady at the front register for years now. She's
+                                sweet and I could tell she is a hard worker. Always gotta support this place when I have
+                                a craving for it!!
+                            </p>
+                        </div>
+                        <div class="row centerJ">
+                            <img class="quotesJ" src="./assets/Quotes.png" alt="">
+                        </div>
+                        <div class="row">
+                            <p class="txtCenterJ">Tina T</p>
+                        </div>
+                        <div class="row">
+                            <p class="txtCenterJ">Customer</p>
+                        </div>
+                        <div class="row centerJ">
+                            <img class="dotsJ" src="./assets/DotOutline.png" alt="">
+                            <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                            <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                        </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
