--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -34,10 +34,42 @@
             </nav>
         </div>
 
-        <div class="row"></div>
+        <div class="row">
+            <div class="col bgWhiteJ">
+                <div class="row ">
+                    <div class="col-1">
+
+                    </div>
+                    <div class="col">
+                        <div class="container-fluid">
+                            <div class="row contactUsPaddingJ">
+                                <h2>Don’t Be Afraid To Give Us A Call</h2>
+                            </div>
+                            <div class="row contactUsPaddingJ">
+                                <p>Want to order a delicious banh mi? We’d love to serve you some food. Here’s some
+                                    information that’ll help you order a fantastic meal</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1">
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="col">
+                <div class="row">
+                    <img class="phoneJ" src="../assets/Person using phone.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid contactBgJ">
+            
+        </div>
     </div>
 
-    
+
     <hr class="yellowJ hrLineJ mt-5">
 
     <div class="container-fluid footerPaddingJ">
