--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -170,7 +170,7 @@
     </div>
     <div class="row">
       <div class="headBox">
-        <p>Menu</p>
+        <p>Drinks</p>
       </div>
     </div>
 
